eportal-liferays/bgd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: bgd
  labels:
    app: bgd
spec:
  selector:
    app: bgd
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
